css/summary.css
/* IcoMoon font licensed under the GNU General Public License: http://www.gnu.org/licenses/gpl.html */
@font-face {
  font-family: 'icomoon-summary';
  src:url('../fonts/icomoon.eot');
  src:url('../fonts/icomoon.eot?#iefix') format('embedded-opentype'),
    url('../fonts/icomoon.woff') format('woff'),
    url('../fonts/icomoon.ttf') format('truetype'),
    url('../fonts/icomoon.svg#icomoon') format('svg');
  font-weight: normal;
  font-style: normal;
}

.h5p-summary .summary-content .summary-container > ul {
  margin: 0;
  padding: 0;
  display: block;
}

.h5p-summary .summary-container {
  box-shadow: 0 0 0.5em #999;
  border-radius: 0.4em;
  margin: 1.5em 0;
}

.h5p-summary .summary-options {
  height: auto;
  padding: 0;
  margin: 1.5em 0;
}
.h5p-summary .summary-options ul.h5p-panel {
  display: none;
  padding: 0;
}

.h5p-summary .summary-evaluation {
  overflow: hidden; /* Contain floated counters within the evaluation div */
  margin: 1.5em 0;
}

.h5p-summary .summary-evaluation-content {
  display: block;
  position: relative;
  padding-right: 2em;
  font-size: 1.125em;
}

.h5p-summary .summary-content li {
  list-style: none;
  background-color: rgba(237,237,237,0.9);
  -moz-border-radius: 0.3em;
  -webkit-border-radius: 0.3em;
  border-radius: 0.3em;
  border: 0.1em solid rgba(237,237,237,0.9);
  color: #000;
  font-size: 1em;
  padding: 0.375em 0.875em;
  text-decoration: none;
  margin: 0;
  margin-bottom: 0.3125em;
  -webkit-box-shadow: 0 0.1em 0 rgba(0, 0, 0, 0.2);
  -moz-box-shadow: 0 0.1em 0 rgba(0, 0, 0, 0.2);
  box-shadow: 0 0.1em 0 rgba(0, 0, 0, 0.2);
}

.h5p-summary .summary-content li > p {
  margin: 0.4em 0 0 0;
  padding: 0;
}
.h5p-summary .summary-content li > p:first-child {
  margin: 0;
}
.h5p-summary .summary-container li:not(:last-child) {
  border-bottom: 1px solid #E9E9E9;
  border-radius: 0;
}
.h5p-summary .summary-container li {
  display: none;
  z-index: 5;
  margin: 0;
  border: 0;
  background: none;
  filter: none;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;

  -webkit-transition: background-color 1000ms linear, border-color 1000ms linear;
  -moz-transition: background-color 1000ms linear, border-color 1000ms linear;
  -o-transition: background-color 1000ms linear, border-color 1000ms linear;
  -ms-transition: background-color 1000ms linear, border-color 1000ms linear;
  transition: background-color 1000ms linear, border-color 1000ms linear;
}
.h5p-summary .summary-container li:before {
  text-decoration: none;
  content: "\f00c";
  font-family: 'H5PFontAwesome4';
  color: #255c41;
  float: right;
}
.h5p-summary .summary-claim-unclicked:hover {
  cursor: pointer;
  filter: none;
  border: 0.1em solid rgb(238,228,239);

  background: rgb(238,228,239); /* Old browsers */
}
.h5p-summary li.summary-failed {
  color: #b71c1c;
  border: 0.1em solid #f7d0d0;
  background: #f7d0d0;
  text-decoration: line-through;
  font-weight: bold;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}

.h5p-summary li.summary-failed:before {
  text-decoration: none;
  content: "\f00d";
  font-family: 'H5PFontAwesome4';
  color: #b71c1c;
  float: right;
}

.h5p-summary .summary-options div {
  font-size: 1em;
  padding:0;
  background-repeat: no-repeat;
  background-position: top right;
}

.h5p-summary .summary-score {
  display: none;
  float: right;
  background: #f7d0d0;
  -moz-border-radius: 0.3em;
  -webkit-border-radius: 0.3em;
  border-radius: 0.3em;
  padding: 0.1em 0.3em;
  font-weight: normal;
  margin-right: 0.3em;
}

.h5p-summary .summary-score:before {
  text-decoration: none;
  content: "\f00d";
  font-family: 'H5PFontAwesome4';
  color: #b71c1c;
  float: left;
  margin-right: 0.3em;
  top: 0.1em;
}

.h5p-summary .summary-progress {
  float: right;
  background: #9dd8bb;
  -moz-border-radius: 0.3em;
  -webkit-border-radius: 0.3em;
  border-radius: 0.3em;
  padding: 0.1em 0.3em;
  font-weight: normal;
}

.h5p-summary .summary-progress:before {
  text-decoration: none;
  content: "\f00c";
  font-family: 'H5PFontAwesome4';
  color: #255c41;
  float: left;
  margin-right: 0.3em;
}

.h5p-summary .summary-options h2 {
  font-size: 1.2em;
  font-weight: bold;
  padding-bottom: 0.5em;
  margin: 0;
}

.h5p-summary .summary-evaluation .joubel-tip-container {
  position: absolute;
  top: -0.1em;
  right: 0.1em;
}
.h5p-summary .summary-evaluation .joubel-tip-icon {
  line-height: 1;
  font-size: 1.3em;
}

.h5p-summary .summary-feedback {
  display: inline-block;
  float: right;
}

